--- a/src/app/my-videos/my-videos.page.html
+++ b/src/app/my-videos/my-videos.page.html
@@ -23,7 +23,7 @@
   </ion-fab>
   <ion-list>
     <ion-item *ngFor="let video of myVideos">
-      <ion-thumbnail slot="start">
+      <ion-thumbnail slot="start"  (click)="playVideo(video)">
         <img [src]="video.thumbnail? video.thumbnail.url: '/assets/video.png'">
       </ion-thumbnail>
       <ion-label>
