--- a/src/app/youtube-videos/youtube-videos.page.html
+++ b/src/app/youtube-videos/youtube-videos.page.html
@@ -1,9 +1,31 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>YoutubeVideos</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar [(ngModel)]="query" (ionInput)="searchVideos($event)">
+      </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item *ngFor="let video of myVideos">
+      <ion-thumbnail slot="start" (click)="playVideo(video)">
+        <img
+          [src]="video.thumbnail ? video.thumbnail.url : '/assets/video.png'"
+        />
+      </ion-thumbnail>
+      <ion-label>
+        <h3>{{ video.title }}</h3>
+        <p *ngIf="video.description">{{ video.description }}</p>
+      </ion-label>
+      <ion-button slot="end" fill="clear" (click)="showMenu(video)">
+        <ion-icon name="more" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
