--- a/src/app/playlists/playlists.page.html
+++ b/src/app/playlists/playlists.page.html
@@ -2,6 +2,10 @@
   <ion-toolbar>
     <ion-title>Playlists</ion-title>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar [(ngModel)]="query" (ionInput)="searchVideos($event)">
+      </ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
