--- a/src/app/youtube-videos/youtube-videos.page.html
+++ b/src/app/youtube-videos/youtube-videos.page.html
@@ -15,9 +15,7 @@
   <ion-list>
     <ion-item *ngFor="let video of myVideos">
       <ion-thumbnail slot="start" (click)="playVideo(video)">
-        <img
-          [src]="video.thumbnail ? video.thumbnail.url : '/assets/video.png'"
-        />
+        <img [src]="video.thumbnail ? video.thumbnail.url : '/assets/video.png'"/>
       </ion-thumbnail>
       <ion-label>
         <h3>{{ video.title }}</h3>
