--- a/src/app/video-editor/video-editor.page.html
+++ b/src/app/video-editor/video-editor.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Video Properties</ion-title>
+    <ion-title>Información</ion-title>
     <ion-buttons slot="end">
-      <ion-button *ngIf="mode !== 'view'" (click)="save()">Save</ion-button>
+      <ion-button *ngIf="mode !== 'view'" (click)="save()">Guardar</ion-button>
       <ion-button (click)="close()">
-        {{ mode === 'view'? 'Close': 'Cancel' }}
+        {{ mode === 'view'? 'Close': 'Cancelar' }}
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -12,15 +12,15 @@
 <ion-content class="ion-padding-horizontal">
   <ion-list>
     <ion-item>
-      <ion-label position="floating">Title</ion-label>
+      <ion-label position="floating">Titulo</ion-label>
       <ion-input type="text" [readonly]="mode === 'view'" [(ngModel)]="video.title"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Description</ion-label>
+      <ion-label position="floating">Descripción</ion-label>
       <ion-input type="text" [readonly]="mode === 'view'" [(ngModel)]="video.description"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Tags</ion-label>
+      <ion-label position="floating">Etiquetas</ion-label>
       <ion-input type="text" [readonly]="mode === 'view'" [(ngModel)]="video.tags"></ion-input>
     </ion-item>
     
