--- a/src/app/youtube-videos/youtube-videos.page.html
+++ b/src/app/youtube-videos/youtube-videos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>YoutubeVideos</ion-title>
+    <ion-title>Youtube</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -22,7 +22,7 @@
         <p *ngIf="video.description">{{ video.description }}</p>
       </ion-label>
       <ion-button slot="end" fill="clear" (click)="showMenu(video)">
-        <ion-icon name="more" slot="icon-only"></ion-icon>
+        <ion-icon name="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-item>
   </ion-list>
