--- a/src/app/playlist-edit/playlist-edit.page.html
+++ b/src/app/playlist-edit/playlist-edit.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title> Playlist </ion-title>
     <ion-buttons slot="end">
-      <ion-button *ngIf="mode !== 'view'" (click)="save()">Save</ion-button>
+      <ion-button *ngIf="mode !== 'view'" (click)="save()">Guardar</ion-button>
       <ion-button (click)="close()">
         {{ mode === "view" ? "Close" : "Cancelar" }}
       </ion-button>
