--- a/src/app/playlist-videos/playlist-videos.page.html
+++ b/src/app/playlist-videos/playlist-videos.page.html
@@ -12,11 +12,16 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let video of myVideos">
-      <video *ngIf="video.type !== 'youtube'" [src]="video.url" autoplay controls
-        style="width: 100%; height: 100%;"></video>
-      <iframe *ngIf="video.type === 'youtube'" style="width: 100%; height: 100%;" id="ytplayer" type="text/html"
-        [src]="domSanitizer.bypassSecurityTrustResourceUrl(video.url)" frameborder="0" width="100%"
-        height="100%"></iframe>
+      <ion-thumbnail slot="start">
+        <img [src]="video.thumbnail? video.thumbnail.url: '/assets/video.png'">
+      </ion-thumbnail>
+      <ion-label>
+        <h3>{{ video.title }}</h3>
+        <p *ngIf="video.description">{{ video.description }}</p>
+      </ion-label>
+      <ion-button slot="end" fill="clear" (click)="showMenu(video)">
+        <ion-icon name="ellipsis-vertical"></ion-icon>
+      </ion-button>
     </ion-item>
   </ion-list>
 </ion-content>
