--- a/src/app/my-videos/my-videos.page.html
+++ b/src/app/my-videos/my-videos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Mis Videos</ion-title>
+    <ion-title class="ion-text-center">Mis Videos</ion-title>
   </ion-toolbar>
    <ion-toolbar>
     <ion-searchbar [(ngModel)]="query" (ionInput)="searchVideos($event)">
