--- a/src/app/playlist-select/playlist-select.page.html
+++ b/src/app/playlist-select/playlist-select.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Selecciona Playlist</ion-title>
+    <ion-title class="ion-text-center">Selecciona Playlist</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="close()">
         Cancelar
