--- a/src/app/playlist-videos/playlist-videos.page.html
+++ b/src/app/playlist-videos/playlist-videos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>PlaylistVideos {{ playlist.title }}</ion-title>
+    <ion-title class="ion-text-center">PlaylistVideos {{ playlist.title }}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="close()">
         Close
