--- a/src/app/video-player/video-player.page.html
+++ b/src/app/video-player/video-player.page.html
@@ -1,8 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Play video</ion-title>
+    <ion-title class="ion-text-center">Play video</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="close()">Close</ion-button>
+      <ion-button (click)="close()"><ion-icon name="close-circle-sharp"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
