--- a/src/app/playlist-edit/playlist-edit.page.html
+++ b/src/app/playlist-edit/playlist-edit.page.html
@@ -1,10 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title> Playlist </ion-title>
+    <ion-buttons slot="start">
+      <ion-button *ngIf="mode !== 'view'" (click)="save()">
+        <ion-icon name="save-sharp"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center"> Playlist </ion-title>
     <ion-buttons slot="end">
-      <ion-button *ngIf="mode !== 'view'" (click)="save()">Guardar</ion-button>
       <ion-button (click)="close()">
-        {{ mode === "view" ? "Close" : "Cancelar" }}
+        <ion-icon name="close-circle-sharp"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
