--- a/src/app/playlists/playlists.page.html
+++ b/src/app/playlists/playlists.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Playlists</ion-title>
+    <ion-title class="ion-text-center">Playlists</ion-title>
   </ion-toolbar>
 </ion-header>
 
