--- a/src/app/youtube-videos/youtube-videos.page.html
+++ b/src/app/youtube-videos/youtube-videos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Youtube</ion-title>
+    <ion-title class="ion-text-center">Youtube</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
