--- a/src/app/playlist-edit/playlist-edit.page.html
+++ b/src/app/playlist-edit/playlist-edit.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar  color="dark">
     <ion-buttons slot="start">
       <ion-button *ngIf="mode !== 'view'" (click)="save()">
         <ion-icon name="save-sharp"></ion-icon>
@@ -13,8 +13,9 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding-horizontal">
-  <ion-list>
+<ion-content class="ion-padding-horizontal"  color="dark"> 
+  <ion-card>
+  <ion-list >
     <ion-item>
       <ion-label position="floating">Title</ion-label>
       <ion-input type="text" [readonly]="mode === 'view'" [(ngModel)]="playlist.title"></ion-input>
@@ -24,8 +25,8 @@
       <ion-input type="text" [readonly]="mode === 'view'" [(ngModel)]="playlist.description"></ion-input>
     </ion-item>
   </ion-list>
-  <ion-card>
-    <ion-fab vertical="top" horizontal="end">
+  
+    <ion-fab vertical="end" horizontal="end">
       <ion-fab-button>
         <ion-icon name="create"></ion-icon>
       </ion-fab-button>
