--- a/src/app/playlist-player/playlist-player.page.html
+++ b/src/app/playlist-player/playlist-player.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title class="ion-text-center">Playing: {{ playlist.title }}</ion-title>
     <ion-buttons slot="end">
       <ion-button *ngIf="index - 1 > -1" (click)="playPrevious()">
