--- a/src/app/playlists/playlists.page.html
+++ b/src/app/playlists/playlists.page.html
@@ -1,10 +1,10 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title class="ion-text-center">Playlists</ion-title>
+  <ion-toolbar color="dark">
+    <ion-title class="ion-text-center" >Playlists</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content >
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="addPlaylistV()">
       <ion-icon name="add"></ion-icon>
