--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,14 +1,17 @@
-<ion-tabs>
+<ion-tabs >
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar color="dark" slot="bottom">
     <ion-tab-button tab="videos">
       <ion-icon name="videocam"></ion-icon>
+      <ion-label>Mis videos</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="youtube">
       <ion-icon name="logo-youtube"></ion-icon>
+      <ion-label>Youtube</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="playlists">
       <ion-icon name="star"></ion-icon>
+      <ion-label>Mi playlists</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
