--- a/src/app/video-player/video-player.page.html
+++ b/src/app/video-player/video-player.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title class="ion-text-center">Play video</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="close()"><ion-icon name="close-circle-sharp"></ion-icon>
