--- a/src/app/youtube-videos/youtube-videos.page.html
+++ b/src/app/youtube-videos/youtube-videos.page.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title class="ion-text-center">Youtube</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-toolbar>
-    <ion-searchbar [(ngModel)]="query" (ionInput)="searchVideos($event)">
+  <ion-toolbar color="dark">
+    <ion-searchbar color="dark" [(ngModel)]="query" (ionInput)="searchVideos($event)">
       </ion-searchbar>
   </ion-toolbar>
 </ion-header>
@@ -18,8 +18,8 @@
         <img [src]="video.thumbnail ? video.thumbnail.url : '/assets/video.png'"/>
       </ion-thumbnail>
       <ion-label>
-        <h3>{{ video.title }}</h3>
-        <p *ngIf="video.description">{{ video.description }}</p>
+        <h3 style="color: #10dc60">{{ video.title }}</h3>
+        <p style="color: #ffffff" *ngIf="video.description">{{ video.description }}</p>
       </ion-label>
       <ion-button slot="end" fill="clear" (click)="showMenu(video)">
         <ion-icon name="ellipsis-vertical"></ion-icon>
