--- a/src/app/playlist-select/playlist-select.page.html
+++ b/src/app/playlist-select/playlist-select.page.html
@@ -3,7 +3,7 @@
     <ion-title class="ion-text-center">Selecciona Playlist</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="close()">
-        Cancelar
+        <ion-icon name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
