--- a/src/app/playlist-player/playlist-player.page.html
+++ b/src/app/playlist-player/playlist-player.page.html
@@ -2,12 +2,7 @@
   <ion-toolbar color="dark">
     <ion-title class="ion-text-center">Playing: {{ playlist.title }}</ion-title>
     <ion-buttons slot="end">
-      <ion-button *ngIf="index - 1 > -1" (click)="playPrevious()">
-        <ion-icon name="skip-backward"></ion-icon>
-      </ion-button>
-      <ion-button *ngIf="index + 1 < myVideos.length" (click)="playNext()">
-        <ion-icon name="skip-forward"></ion-icon>
-      </ion-button>
+      
       <ion-button (click)="close()">
         <ion-icon name="close"></ion-icon>
       </ion-button>
@@ -15,8 +10,22 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
+  <video *ngIf="video && video.type !== 'youtube'" [src]="video.url" autoplay controls   style="width: 100%; height: 100%;"></video>
   <iframe *ngIf="video && video.type === 'youtube'" style="width: 100%; height: 100%;" id="ytplayer" type="text/html"
     [src]="domSanitizer.bypassSecurityTrustResourceUrl(video.url)" frameborder="0" width="100%" height="100%"></iframe>
-  <video *ngIf="video && video.type !== 'youtube'" [src]="video.url" autoplay controls (ended)="playNext()"
-    style="width: 100%; height: 100%;"></video>
 </ion-content>
+
+<ion-tab-bar color="dark" slot="bottom">
+  <ion-tab-button (click)="playPrevious()" > 
+    <ion-icon name="play-skip-back-outline"></ion-icon>
+    <ion-label>Anterior</ion-label>
+  </ion-tab-button>
+  <ion-tab-button (click)="playRandom()" > 
+  <ion-icon name="shuffle-outline"></ion-icon>
+  <ion-label>Aleatorio</ion-label>
+</ion-tab-button>
+  <ion-tab-button  (click)="playNext()">
+    <ion-icon name="play-skip-forward-outline"></ion-icon>
+    <ion-label>Siguiente</ion-label>
+  </ion-tab-button>
+</ion-tab-bar>
