--- a/src/app/playlists/playlists.page.html
+++ b/src/app/playlists/playlists.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title class="ion-text-center" >Playlists</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
