--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-button (click)="close()">
         <ion-icon name="close"></ion-icon>
@@ -13,22 +13,22 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding-horizontal">
+<ion-content color="dark" class="ion-padding-horizontal">
   <ion-list>
-    <ion-item>
-      <ion-label position="floating">Email</ion-label>
+    <ion-item color="dark">
+      <ion-label position="floating">Email:</ion-label>
       <ion-input type="email" [(ngModel)]="user.email"></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-label position="floating">Password</ion-label>
+    <ion-item color="dark">
+      <ion-label position="floating">Contraseña:</ion-label>
       <ion-input type="password" [(ngModel)]="user.password"></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-label position="floating">Name</ion-label>
+    <ion-item color="dark">
+      <ion-label position="floating">Nombre:</ion-label>
       <ion-input type="text" [(ngModel)]="user.name"></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-label position="floating">Surname</ion-label>
+    <ion-item color="dark">
+      <ion-label position="floating">Apellido:</ion-label>
       <ion-input type="text" [(ngModel)]="user.surname"></ion-input>
     </ion-item>
   </ion-list> 
